tests/compile-fail/intrinsics/out_of_bounds_ptr_3.stderr
error: Undefined Behavior: pointer arithmetic failed: alloc956 has size 4, so pointer to 1 byte starting at offset -1 is out-of-bounds
   --> /home/ubuntu/.rustup/toolchains/miri/lib/rustlib/src/rust/library/core/src/ptr/const_ptr.rs:295:18
    |
295 |         unsafe { intrinsics::offset(self, count) }
    |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ pointer arithmetic failed: alloc956 has size 4, so pointer to 1 byte starting at offset -1 is out-of-bounds
    |
    = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
    = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
            
    = note: inside `std::ptr::const_ptr::<impl *const i8>::offset` at /home/ubuntu/.rustup/toolchains/miri/lib/rustlib/src/rust/library/core/src/ptr/const_ptr.rs:295:18
note: inside `main` at $DIR/out_of_bounds_ptr_3.rs:5:22
   --> $DIR/out_of_bounds_ptr_3.rs:5:22
    |
5   |     let x = unsafe { x.offset(-1) };
    |                      ^^^^^^^^^^^^

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

